Affichage date et heure + code en data binding

--- a/meetingRoom/src/app/app.component.html
+++ b/meetingRoom/src/app/app.component.html
@@ -1,4 +1,10 @@
-<div >
-    <p>{{ date | date: "HH:mm:ss" }}</p>
-    <p>{{ date | date: 'fullDate' }}</p>
+<div>
+
+  <app-code></app-code>
+
+  <div class="col-sm-3 next, red">
+      <h1>{{ date | date: "HH:mm:ss" }}</h1>
+      <h1>{{ date | date: 'fullDate' }}</h1>
+    </div>
+
 </div>
