Ajout de commentaire

--- a/meetingRoom/src/app/app.component.html
+++ b/meetingRoom/src/app/app.component.html
@@ -3,7 +3,9 @@
   <app-code></app-code>
 
   <div class="col-sm-3 next, red">
+      <!------- Affichage de l'heure -------------->
       <h1>{{ date | date: "HH:mm:ss" }}</h1>
+      <!------- Affichage de la date -------------->
       <h1>{{ date | date: 'fullDate' }}</h1>
     </div>
 
