--- a/meetingRoom/src/app/code/code.component.html
+++ b/meetingRoom/src/app/code/code.component.html
@@ -1,4 +1,5 @@
-<div class="col-sm-5 next, blue">
+<div class="col-sm-7 code component">
+  <div class="ecart useless">
   <h1>Code Réunion:</h1>
   <hr>
   <h1 *ngIf="meeting">{{meeting.code}}</h1>
@@ -6,4 +7,5 @@
   <p *ngIf="meeting">{{meeting.startdate}}</p>
   <p *ngIf="meeting">{{meeting.enddate}}</p>
   <p *ngIf="meeting">{{meeting.creator}}</p>
+</div>
 </div>
