--- a/meetingRoom/src/app/events/events.component.html
+++ b/meetingRoom/src/app/events/events.component.html
@@ -1,4 +1,7 @@
-<p>event list</p>
+<div class="col-sm-5 next component">
+<h1>Prochaines réunions</h1>
+<hr>
 <ul>
   <li *ngFor="let el of event_list">{{el.description}}</li>
 </ul>
+</div>
