--- a/meetingRoom/src/app/code/code.component.html
+++ b/meetingRoom/src/app/code/code.component.html
@@ -1,11 +1,9 @@
-<div class="col-sm-7 code component">
-  <div class="ecart useless">
+<div class="code">
   <h1>Code Réunion:</h1>
   <hr>
-  <h1 *ngIf="meeting">{{meeting.code}}</h1>
-  <p *ngIf="meeting">{{meeting.description}}</p>
-  <p *ngIf="meeting">{{meeting.startdate}}</p>
-  <p *ngIf="meeting">{{meeting.enddate}}</p>
-  <p *ngIf="meeting">{{meeting.creator}}</p>
-</div>
+  <div class="space">
+    <h1 class="co" *ngIf="meeting">{{meeting.code}}</h1>
+    <p class="info" *ngIf="meeting">{{meeting.description}}</p>
+    <p class="info" *ngIf="meeting">{{meeting.creator}}</p>
+  </div>
 </div>
