--- a/meetingRoom/src/styles.css
+++ b/meetingRoom/src/styles.css
@@ -1,52 +1,93 @@
-/* You can add global styles to this file, and also import other style files */
-body{
-  background: url(jedi.jpg) no-repeat;
-  background-position: center;
+body {
+  background-color: #b7c9d3;
 }
-div{
-border: solid;
+
+.container {
+  padding: 10px;
   text-align: center;
-  }
-
-.component{
-background-color: rgba(255,255,255,0.6);
+  color: #00205b;
+  font-family: "Arial Black", "Arial Bold", Gadget, sans-serif;
+  font-size: 75%;
+  text-transform : uppercase;
 }
 
-.next{
-right: 0.5px;
-top: 1px;
-  height: 750px;
-  overflow: hidden;
+.next {
+  position: absolute;
+  background-color: rgb(255,255,255);
+  right: 1.25%;
+  bottom: 27.5%;
+  width: 48%;
+  height: 70%;
 }
-.code{
-  left: 0.5px;
-  top: 1px;
-  height: 750px;
+
+.code {
+  position: absolute;
+  background-color: rgb(255,255,255);
+  font-size: 100%;
+  width: 48%;
+  bottom: 27.5%;
+  height: 53.5%;
+}
+
+.retour {
+  position: absolute;
+  background-color: rgb(255,255,255);
+  bottom: 2%;
+  width: 97.5%;
+  height: 23%;
+}
+
+.heure {
+  position: absolute;
+  background-color: rgb(255,255,255);
+  width: 48%;
+  height: 14%;
+}
+
+.button:hover {
+  background-color: white;
+  border: 2px solid #005587;
+  color: black;
+}
+
+button {
+  border-radius: 8%;
+  background-color: #005587;
+  border: 2px solid #005587;
+  color: white;
+  padding: 1% 32px;
   text-align: center;
+  font-size: 16px;
+  margin: 1% 5%;
+  cursor: pointer;
+}
 
+.space{
+  margin-top: 2%;
+  margin-bottom: 2%;
+  margin-left: 5%;
+  margin-right: 5%;
 }
-.heure{
-  height: 175px;
 
+.list {
+  margin: 3%;
+  padding: 2%;
+  font-size: 135%;
+  color: white;
+  background-color: #6399ae;
 }
-.useless{
-  border: none;
-}
-.ecart{
-  margin-top: 250px;
-}
-.leboutton{
-  height: 175px;
-  padding-top: 10px;
-}
-button{
-  height: 50px;
-  width: 50px;
-  background-size: contain;
-  background-position: center;
-}
-li{
 
-  text-indent: -100%;
-  list-style-type: none;
+.info {
+  margin: 2%;
+  font-size: 125%;
+  color: white;
+  text-transform : lowercase;
+  background-color: #0085ad;
+}
+
+.co {
+  margin: 2%;
+  margin-bottom: 18%;
+  font-size: 275%;
+  color: #0085ad;
 }
